# perceptron

./: README.md  main.py  pyproject.toml  weights.txt
controller/: app.py  controller.py
model/: __init__.py  activation_functions.py  perceptron.py
perceptron/: __init__.py  perceptron.py
tests/: inputs.txt  test_perceptron.py
ui/: main_window.py  widgets.py
ui/widgets/: activaction_function_frame.py
utils/: __init__.py  file.py  translations.py
view/: __init__.py  app.py  ui.py
view/widgets/: __init__.py  component_entry.py  menu_frame.py  output_frame.py  output_item.py  perceptron_config_window.py  perceptron_frame.py  vector_frame.py  vectors_frame.py  weight_item.py  weights_frame.py
